--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
+  background-color: white;
 }
 
 h1 {
@@ -65,4 +66,23 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+.plan-card {
+  margin: "20px";
+  border: "2px solid black";
+  display: "flex";
+  align-items: "center";
+  gap: "10px";
+}
+.plan-info {
+  display: "flex";
+  flex-direction: "column";
+  text-align: "left";
+}
+.great-deal .premium .all-inclusive{
+  width: "100px";
+  height: "30px";
+  border-radius: "5px";
+  text-align: "center";
+  font-weight: "bold";
 }
